--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "devDependencies": {
-    "node-sass": "^6.0.1"
+    "web-vitals": "^1.0.1",
+    "node-sass": "^6.0.1",
+    "redux-devtools-extension": "^2.13.9" 
   },
   "scripts": {
     "start": "react-scripts start",
