--- a/package.json
+++ b/package.json
@@ -27,15 +27,10 @@
     "node-sass": "^6.0.1",
     "redux-devtools-extension": "^2.13.9"
   },
-  "jestSonar": {
-    "reportPath": "testResults",
-    "reportFile": "sonar-report.xml",
-    "indent": 4
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --watchAll=false --testResultsProcessor ./node_modules/jest-sonar-reporter/index.js",
+    "test": "react-scripts test --watchAll=false --testResultsProcessor ./node_modules/jest-sonar-reporter/index.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
