--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Install Jest globally
               run: sudo npm install -g jest
             - name: Run Tests
-              run: npm run test
+              run: npm run test --coverage
             - name: SonarCloud Scan
               uses: SonarSource/sonarcloud-github-action@master
               env:
