--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -25,15 +25,15 @@ jobs:
 
       # Build 
       - name: Build production artifacts
+        run: yarn install
+      
+      # Build 
+      - name: Build production artifacts
         run: yarn build
       
       # DEBUG
       - name: List build directory content
         run: ls build
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
