--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -24,16 +24,28 @@ jobs:
       - uses: actions/checkout@v2
 
       # Build 
-      - name: Build production artifacts
+      - name: Install NodeJS modules and dependencies
         run: yarn install
       
       # Build 
       - name: Build production artifacts
         run: yarn build
       
-      # DEBUG
-      - name: List build directory content
-        run: ls build
+      # Test one last time
+      - name: Test app
+        run: yarn test
+
+      # Deploy to an AWS S3
+      - name: Deploying to AWS S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: "build"
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
