More changes to README.md file + small production GitHub Action adjustment

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,54 +1,40 @@
 name: Production Build
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main]
+    # pull_request:
+    #   branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+        steps:
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - uses: actions/checkout@v2
 
-      # Build 
-      - name: Install NodeJS modules and dependencies
-        run: yarn install
-      
-      # Build 
-      - name: Build production artifacts
-        run: yarn build
-      
-      # Test one last time
-      - name: Test app
-        run: yarn test
+            # Build
+            - name: Install NodeJS modules and dependencies
+              run: yarn install
 
-      # Deploy to an AWS S3
-      - name: Deploying to AWS S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "build"
+            # Build
+            - name: Build production artifacts
+              run: yarn build
 
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
+            # Test one last time
+            - name: Test app
+              run: yarn test
+
+            # Deploy to an AWS S3
+            - name: Deploying to AWS S3
+              uses: jakejarvis/s3-sync-action@master
+              with:
+                  args: --delete
+              env:
+                  AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_REGION: ${{ secrets.AWS_REGION }}
+                  SOURCE_DIR: 'build'
