Added SonarCloud when pushing to main

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,6 +1,8 @@
 # SonarCloud action
 name: SonarCloud
 on:
+    push:
+        branches: [main]
     pull_request:
         types: [opened, synchronize, reopened]
 jobs:
